fixed melissa slide overlap issue. oh, z-index. closes #69

--- a/less/app.less
+++ b/less/app.less
@@ -165,6 +165,8 @@ header {
     }
     .slide {
         &.person {
+            background: #121212;
+
             h2 {
                 background-repeat: no-repeat;
                 height: 34px;
@@ -310,6 +312,9 @@ header {
         padding: 22px;
     }
     #intro {
+        position: relative;
+        z-index: 200;
+
         .photo-intro {
             margin: 0 auto;
             display: block;
@@ -327,24 +332,41 @@ header {
         .row { padding-top: 2px; }
     }
     #amanda {
+        position: relative;
+        z-index: 199;
+
         h2 { background-image: url('../img/title-amanda.png'); }
     }
     #frankie {
+        position: relative;
+        z-index: 197;
+
         h2 { background-image: url('../img/title-frankie.png'); }
         .photo-then-wrap { padding-top: 85px; }
     }
     #josh {
+        position: relative;
+        z-index: 196;
+
         h2 { background-image: url('../img/title-josh.png'); }
         .photo-then-wrap { padding-top: 50px; }
     }
     #juan {
+        position: relative;
+        z-index: 198;
+
         h2 { background-image: url('../img/title-juan.png'); }
         .photo-then-wrap { padding-top: 400px; }
     }
     #melissa {
+        position: relative;
+        z-index: 195;
+
         h2 { background-image: url('../img/title-melissa.png'); }
     }
     #cowbird-grid {
+        position: relative;
+        z-index: 194;
         background-color: #222;
 
         .span12 { padding-bottom: 112px; }
@@ -352,6 +374,8 @@ header {
         #cowbird-summary { display: none; }
     }
     #notebook {
+        position: relative;
+        z-index: 193;
         background-color: #ebebeb;
         color: #666;
 
@@ -395,6 +419,8 @@ header {
         .span8 { padding-bottom: 112px; }
     }
     #credits { 
+        position: relative;
+        z-index: 192;
         color: #666;
         background-color: #e0e0e0;
 
